final changes to the comments

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -34,7 +34,7 @@ A thin film (28 nm) of Cr was used, supporting around seven periods of the \gls{
 The experimental procedure is depicted schematically in Fig.~\ref{fig:Cr_schematic}(a). 
 \begin{figure}[h]
 	\IncludeGraphics{schematic}
-\caption{\label{fig:Cr_schematic}{\bf Experimental methods} a) Schematic of the experimental setup where two optical pump pulses are applied to the \gls{SDW} at $t=\tau_1,\tau_2$, leading to an oscillation of the \gls{PLD} which is probed through the \gls{XFEL}. The heat from the pulses is subsequently transferred from the \gls{SDW} to the heat bath, cooling down the \gls{SDW}. b) Schematic representation of X-ray diffraction measurements in panel (c). The (002) peak is the central Bragg peak with the ellipses representing the Laue fringes due to the thin film geometry. Here $\bm q=4\pi/\lambda \sin(\theta)$ is the scattering vector with $\lambda$ being the x-ray wavelength. The central peak is weaker than the fringes due to the position of the Ewald sphere, as depicted by the blue line in (b).}
+\caption{\label{fig:Cr_schematic}{\bf Experimental methods} a) Schematic of the experimental setup where two optical pump pulses are applied to the \gls{SDW} at $t=\tau_1,\tau_2$, leading to an oscillation of the \gls{PLD} which is probed through the \gls{XFEL}. The heat from the pulses is subsequently transferred from the \gls{SDW} to the heat bath, cooling down the \gls{SDW}. b) Schematic representation of X-ray diffraction measurements in panel (c). The (002) peak is the central Bragg peak with the ellipses representing the Laue fringes due to the thin film geometry. Here $\bm q=\frac{4\pi}{\lambda} \sin(\theta)$ is the scattering vector with $\lambda$ being the x-ray wavelength. The central peak is weaker than the fringes due to the position of the Ewald sphere, as depicted by the blue line in (b).}
 \end{figure}
 The film was illuminated by two sequential 40 fs optical pulses at times $\tau_1$ and $\tau_2$, heating up the electronic subsystem and, consequently, the \gls{SDW}.
 The film thickness was chosen to be smaller than the optical skin depth of Cr, meaning that the pulses excite the entire volume of the sample homogeneously.
@@ -47,21 +47,21 @@ To further increase the contrast of the \gls{PLD} peak, the Ewald sphere is tilt
 Furthermore, again due to the pinning of the \gls{PLD} to the boundaries of the thin film, its phase can be obtained from the interference between its corresponding fringe peaks and those that originate from the thin film geometry \cite{Singer2015prb}.
 This allows us to track the time evolution of the amplitude and phase of the \gls{PLD}, giving us access to its dynamics that appear as a result of the applied pulses to the \gls{SDW}.
 
-The sets of measurements that form the starting point for our further investigation are displayed in Figs.~\ref{fig:Cr_experimental1} and ~\ref{fig:Cr_experimental2}.
+The sets of measurements that form the starting point for our further investigation are displayed in Figs.~\ref{fig:Cr_experimental1} and ~\ref{fig:Cr_experimental2} \cite{Gorobtsov2021}.
 It is important to realize that the \gls{SDW} order is not directly accessible through these measurements. In effect, this means that we are studying the excitation caused to the \gls{PLD} because of its coupling with the externally perturbed \gls{SDW}.
 \begin{figure}
 	\centering
 \IncludeGraphics{experimental1}
-\caption{\label{fig:Cr_experimental1}{\bf Pump-Pump delay-dependent interference.} a) Experimental map of \gls{PLD} amplitude before and after excitation of two pulses with a fluence of 1.45 mJ/cm$^2$. The green box highlights the area of lower oscillation amplitude of the \gls{PLD} when the temperature of the \gls{SDW} exceeds $T_N$ due to concurrent pulses. b) Destructive interference when $\tau_2 - \tau_1 = 620$ fs, corresponding to the horizontal slice of panel (a) marked by the blue line. The blue graph in the inset demonstrates how the evolution would be without the second pulse. c) Constructive interference when $\tau_2 - \tau_1 = 845$ fs, corresponding to the purple slice in panel (a). In both panels (b) and (c), the dashed red line marks the arrival time of the second pulse. The dots denote the experimentally measured values, and the graphs the theoretical simulations (see Fig.~\ref{fig:Cr_theoretical_fit} for more details).}
+\caption{\label{fig:Cr_experimental1}{\bf Pump-pump delay-dependent interference.} a) Heat map of the measured \gls{PLD} amplitude upon excitation by two pulses at different $\tau_1$ and $\tau_2$, with a fluence of 1.45 mJ/cm$^2$ each. The green box highlights the area of lower oscillation amplitude of the \gls{PLD} when the temperature of the \gls{SDW} exceeds $T_N$ due to concurrent pulses. b) Destructive interference when $\tau_2 - \tau_1 = 620$ fs, corresponding to the horizontal slice of panel (a) marked by the blue line. The blue graph in the inset demonstrates how the evolution would be without the second pulse. c) Constructive interference when $\tau_2 - \tau_1 = 845$ fs, corresponding to the purple slice in panel (a). In both panels (b) and (c), the dashed red line marks the arrival time of the second pulse. The dots denote the experimentally measured values, and the graphs -- the theoretical simulations (see Fig.~\ref{fig:Cr_theoretical_fit} for more details).\cite{Gorobtsov2021}}
 \end{figure}
 \begin{figure}
 	\centering
 \IncludeGraphics[width=0.78\textwidth]{experimental2}
-\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the \gls{PLD} amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the \gls{PLD} in the constructive and destructive pump-pump delay conditions, with pump spacing similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The dashed red lines mark the arrival time of the second pulse in each experiment. In these measurements the \gls{SDW} is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
+\caption{\label{fig:Cr_experimental2}{\bf Interference dependence on pulse fluence.} a) Map of the \gls{PLD} amplitude before and after excitation by two pulses with fluences $W_1=W_2=1.45$mJ/cm$^2$. b) Similar to (a) but with fluences $W_1=1.45$mJ/cm$^2$ and $W_2=0.7$mJ/cm$^2$, demonstrating the diminished influence of the second pulse. c) Amplitude of the \gls{PLD} in the constructive and destructive pump-pump delay conditions, with pump spacing similar to panels (b, c) of Fig.~\ref{fig:Cr_experimental1}, but for fluences $W_1 = 9.5$ mJ/cm$^2$ and $W_2 = 4.8$ mJ/cm$^2$. The vertical dashed lines mark the arrival time of the second pulse in each experiment. In these measurements the \gls{SDW} is fully melted by the first pulse, and the timing of the second pulse has no influence on the behavior.}
 \end{figure}
 
-We first focus on Fig.~\ref{fig:Cr_experimental1}(a), where the \gls{PLD} amplitude is represented as a heatmap with on the x-axis the time evolution, and on the y-axis the delay between the two consecutive pumps by optical pulses. The y-axis basically shows many experiments such as the ones in panel (b) and (c) of the same figure. Consequently, the blue and purple line demonstrate the horizontal slice corresponding to the measurement highlighted by the box with the same color.  
 We can observe that the \gls{PLD} has an oscillation time period of approximately 450 fs, and a damping time of around 3 ps.
+We first focus on Fig.~\ref{fig:Cr_experimental1}(a), where the \gls{PLD} amplitude is represented as a heatmap with the time evolution of the x-ray probe intensity on the horizontal axis, and the delay between the two consecutive pumps on the vertical axis. Each horizontal slice corresponds to an experiment such as those in panel (b) and (c) of the same figure. Consequently, the blue and purple line demonstrate the horizontal slice corresponding to the measurement highlighted by the box with the same color.  
 Still in Fig.~\ref{fig:Cr_experimental1}(a), the very dark vertical band of troughs around probe delay $t = 0$ followed by a less dark band of throughs in the next period indicates the fast restoration of the oscillation equilibrium. 
 This means that the heat transfer rate between the electrons that constitute the \gls{SDW} and the bath is relatively high, leading to a thermalization between the two within a picosecond after heating.
 This partially restores the \gls{SDW} which in turn leads to the partial restoration of the oscillation equilibrium.
@@ -85,7 +85,7 @@ If control is the goal, it is thus important that the \gls{SDW} is allowed to co
 The \gls{SDW} order parameter, furthermore, depends strongest on temperature when it is close to the critical point where it varies as the square root, thus increasing the pulse efficiency in that temperature region.
 These considerations will be discussed in greater detail in Section~\ref{sec:Cr_results}, after the theoretical description is given.
 
-Finally, it was experimentally verified that no timescales related to the behavior of topological defects such as domain walls are present. This would be reflected in a changing width and intensity of the diffraction peaks associated with the \gls{PLD} (Fig.~\ref{fig:Cr_schematic}(b)), which is not observed. This can be explained by the small thickness of the film, allowing only a single \gls{SDW} wavevector direction, such that no domains are formed in the ``depth'' of the film. Furthermore, the \gls{XFEL} pulses had a diameter of 0.2 mm, w hich envelopes multiple \gls{SDW} domains in the plane of the film\cite{Nicholson2016}, making the measurements statistical over domains.
+Finally, it was experimentally verified that no timescales related to the behavior of topological defects such as domain walls are present. This would be reflected in a changing width and intensity of the diffraction peaks associated with the \gls{PLD} (Fig.~\ref{fig:Cr_schematic}(b)), which is not observed. This can be explained by the small thickness of the film, allowing only a single \gls{SDW} wavevector direction, such that no domains are formed in the ``depth'' of the film. Furthermore, the \gls{XFEL} pulses had a diameter of 0.2 mm, which envelopes multiple \gls{SDW} domains in the plane of the film\cite{Nicholson2016}, making the measurements statistical over domains.
 These considerations also support our previous claim that the optical pulses can be assumed to excite the thin film homogeneously. 
 \section{Theory \label{sec:Cr_model}}
 % \lp{some explanation of Peierls instabilities etc, the things that cause the \gls{SDW} in the first place?}
