--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -83,7 +83,7 @@ After uncovering the source of the peculiar magnetoelectric switching, we shift 
 Finally, we comment on the topological nature in Sec.~\ref{sec:GdMn2O5_topology} of the switching behavior and the generality of the model, and conclude with an intuitive argument in Sec.~\ref{sec:GdMn2O5_intuitive}, and resulting simplified model in Sec.~\ref{sec:GdMn2O5_simple_model} in an attempt to further rationalize our observations. 
 
 \section{Gadolinium manganite}
-All $R$Mn$_2$O$_5$ have crystallographic group P$bam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which is eventually lowered to P$_ab2_1a$ when the commensurate magnetic order condenses below $T_{N} \approx 33$ K.
+All $R$Mn$_2$O$_5$ have crystallographic group $Pbam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which is eventually lowered to $P_ab2_1a$ ($P_aca2_1$ in conventional International Tables of Crystallography settings, which has $Pca2_1$ as the corresponding space group) when the commensurate magnetic order condenses below $T_{N} \approx 33$ K \cite{Vecchini14,Lee13}.
 This order is characterized by the propagation vector $\bm{q} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction, as shown in Fig.~\ref{fig:GdMn2O5_unit_cell}(a).
 The magnetic configuration repeats along the crystalline $c$-direction. The magnetic phase transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signaling the onset of the improper ferroelectric polarization  along the $b$-direction ($P_b$) \cite{Vecchini08,Lee13,Vecchini14}.
 When the temperature is lowered further, $P_b$ saturates to a maximum value of around 3600 $\mu$C/m$^2$, the largest found for any rare-earth manganite.
@@ -438,7 +438,7 @@ We thus turn to a more careful investigation of the barriers, first by studying 
 \end{figure}
 %
 The Nudged Elastic Band calculations are a way to track how the low points of the valley in Fig.~\ref{fig:GdMn2O5_heatmap} change for different field strengths.
-This is done by taking two extremal states, then constructing a set of images that interpolate in phase space between these two states. The total energy of the entire chain is then optimized using a small elastic-like energy term that binds the images together, so that they find the lowest energy barrier between the two states.  
+This is done by taking two extremal states, then constructing a set of images that interpolate in configuraion space between these two states. The total energy of the entire chain is then optimized using a small elastic-like energy term that binds the images together, so that they find the lowest energy barrier between the two states.  
 Similar to the previous discussion, we track the evolution of the system starting in state 1, indicated at the far left of Fig.~\ref{fig:GdMn2O5_neb}(a).
 In the following we use {\it ij} to denote the energy barrier between states i and j.
 
@@ -499,7 +499,7 @@ The Gd spins that are coupled strongest to this chain perform a similar rotation
 Indeed, focusing on the highlighted spins in Fig.~\ref{fig:GdMn2O5_4configs}, we see that the chains rotate with increments of around 90$^\circ$ between the states, performing a full 360$^\circ$ rotation by the time they arrive back at the original configuration.
 \begin{figure}[h!]
 	\IncludeGraphics{spin_configs}
-	\caption{{\bf Magnetic switching behavior for different magnetic field angles.} a) The time evolution of the magnetic field strength, where the color gradient encodes the time, corresponding to the color gradients found in the other panels. Two graphs are shown to indicate that the behaviors displayed in panels (b-f) does not depend on which of the branches is followed. The grey dotted line denotes the switching field. (b-f) The switching behavior of $\bm L_1$ and $\bm L_2$ for various angles of the applied magnetic field, ranging between +20$^\circ$ in (b) and -20$^\circ$ in (f). The green arrows denote the \gls{AFM} order parameter orientations during the field sweep in (a), where the color gradients (red to blue) corresponds to the same timing as shown in panel (a). The microscopic spin configuration of the magic angle regime in panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field. \label{fig:GdMn2O5_regimes}}  
+	\caption{{\bf Magnetic switching behavior for different magnetic field angles.} a) The time evolution of the magnetic field strength, where the color gradient encodes the time, corresponding to the color gradients found in the other panels. Two graphs are shown to indicate that the behaviors displayed in panels (b-f) does not depend on which of the branches is followed. The grey dotted line denotes the switching field. (b-f) The switching behavior of $\bm L_1$ and $\bm L_2$ for various angles of the applied magnetic field, ranging between +20$^\circ$ in (b) and -20$^\circ$ in (f). The green arrows denote the \gls{AFM} order parameter orientations during the field sweep in (a), where the color gradients (red to blue) correspond to the same timing as shown in panel (a). The microscopic spin configuration of the magic angle regime in panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field. \label{fig:GdMn2O5_regimes}}  
 \end{figure}
 This peculiar ``crankshaft''-like behavior is a direct result of the evolution of the energy minima and barriers as discussed in the previous Section.
 We use this crankshaft analogy because the material seemingly converts the linear up--down motion of the magnetic field (the ``piston'') into the circular motion performed by the spins (the ``driveshaft'').
