--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -114,7 +114,7 @@ In \gls{PFM}, the mechanical response of an electrically conductive tip in conta
 Because of the piezoelectricity that is present in any ferroelectric material, this alternating current field leads to a periodic expansion and contraction of the sample, which is detected through the deflection of a laser beam that shines on the cantilever that holds the tip.
 As we will discuss further below (see \ref{sec:BTO_piezoelectricity}), the piezoelectric coefficients have opposite signs for the up versus down polarized domains, meaning that the phase of the oscillation can be measured as a probe for the orientation of the polarization.
 These phases are exactly what is shown in panels (a,c) of Fig.~\ref{fig:BTO_experiment}. The amplitude of the oscillation gives an idea of the absolute value of the polarization, which leads to the darker regions of the \glspl{DW} in panel (d) of the same figure.
-Since the \gls{PFM} measurements are performed for an out-of-plane direction, the variations in the color signature of the in--plane polarization in the bottom right domain of panels (c-f) in Fig.~\ref{fig:BTO_experiment} is an indication of the noise of the measurements rather than an actual orientation of the polarization, since any in-plane direction should result in the same angle.
+Since the \gls{PFM} measurements are performed for an out-of-plane direction, the variations in the color signature of the in--plane polarization in the bottom right domain of panels (c-f) in Fig.~\ref{fig:BTO_experiment} is an indication of the noise of the measurements rather than an actual orientation of the polarization, since any in-plane direction should result in the same \gls{PFM} phase.
 In order to accurately map the in--plane polarized domains, one would have to use \gls{PFM} in a perpendicular configuration, however, we are mostly interested in the out-of-plane polarization domains so these latter were omitted in these experiments.
 
 Turning back to the analysis of the domains in Fig.~\ref{fig:BTO_experiment}, we can identify multiple different kinds: in the region shown in panels (a,b) domains with out-of-plane ($c$-direction) polarization are found, whereas panels (c-f) display a more complex region with both out-of-plane and in--plane ($a$-direction) polarization.
