--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6916,3 +6916,22 @@ title = {{A note on the quantum-mechanical perturbation theory}},
 volume = {19},
 year = {1951}
 }
+@article{Nonaka2000,
+author = {Nonaka, Toshihisa and Ohbayashi, Gentaro and Toriumi, Yoshiharu and Mori, Yuji and Hashimoto, Hideki},
+doi = {10.1016/S0040-6090(99)01090-1},
+issn = {00406090},
+journal = {Thin Solid Films},
+month = {jul},
+number = {1-2},
+pages = {258--261},
+title = {{Crystal structure of GeTe and Ge2Sb2Te5 meta-stable phase}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S0040609099010901},
+volume = {370},
+year = {2000}
+}
+@article{Gorobtsov2021,
+author = {Gorobtsov, Oleg and Ponet, Louis and et al.},
+title = {Femtosecond control of phonon dynamics near a magnetic order critical point},
+journal = {Nature Communications, under review}
+}
+
