--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -189,10 +189,10 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 \mainmatter
 \raggedbottom
 % \Include{Introduction}
-\Include{Rashba}
+% \Include{Rashba}
 % \Include{GdMn2O5}
 % \Include{Cr}
-% \Include{Softening}
+\Include{Softening}
 % \appendix
 % \Include{DFT}
 % \Include{Wannier}
